subiendo proyecto tiendaMusica

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #fe0261;
+  --primary: #025afe;
   --negro: #262626;
   --blanco: #FFF;
   --fuente-principal: 'Outfit', sans-serif;
